# vision-guided-grasping

./: .gitignore  README.md
docs/: stage1_perception.md  stage2_localization.md  stage3_isaac_sim.md  stage4_grasp_execution.md  stage5_sim2real_eval.md
ros2_ws/src/camera_source/: package.xml  setup.cfg  setup.py
ros2_ws/src/camera_source/camera_source/: __init__.py  camera_source_node.py
ros2_ws/src/grasp_execution/: package.xml  setup.cfg  setup.py
ros2_ws/src/grasp_execution/grasp_execution/: __init__.py  grasp_presets.py  simple_grasp_executor_node.py  state_machine.py
ros2_ws/src/grasp_execution/test/: conftest.py  test_grasp_presets.py  test_state_machine.py
ros2_ws/src/localization/: package.xml  setup.py
ros2_ws/src/localization/localization/: __init__.py  depth.py  geometry.py  localizer.py  object_localizer_node.py
ros2_ws/src/localization/test/: test_depth.py  test_geometry.py  test_localizer.py
ros2_ws/src/sim2real_eval/: package.xml  setup.cfg  setup.py
ros2_ws/src/sim2real_eval/sim2real_eval/: __init__.py  domain_randomization.py  generate_trials.py  metrics.py  report.py  summarize_results.py
ros2_ws/src/sim2real_eval/test/: test_domain_randomization.py  test_metrics.py  test_report.py
ros2_ws/src/sim_control/: package.xml  setup.py
ros2_ws/src/sim_control/sim_control/: __init__.py  panda_joint_demo_node.py  panda_presets.py
ros2_ws/src/sim_control/test/: test_panda_presets.py
ros2_ws/src/yolo_world_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/yolo_world_ros/test/: test_detector.py  test_visualization.py
ros2_ws/src/yolo_world_ros/yolo_world_ros/: __init__.py  detector.py  visualization.py  yolo_world_node.py
scripts/: README.md
sim/isaac/: stage3_scene.py  stage5_randomized_scene.py
