<?xml version="1.0"?>
<package format="3">
  <name>grasp_execution</name>
  <version>0.1.0</version>
  <description>Lightweight grasp execution state machine for Isaac Sim demos.</description>
  <maintainer email="user@example.com">vision-guided-grasping</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>sim_control</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
