<?xml version="1.0"?>
<package format="3">
  <name>sim2real_eval</name>
  <version>0.1.0</version>
  <description>Offline domain randomization trial generation and robustness reporting.</description>
  <maintainer email="user@example.com">vision-guided-grasping</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
